Запрещённые слова и подпоследовательности

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3129,9 +3129,225 @@ $t\le s + 2\log n + O(1)$.
     
     Завершает доказательство следующее наблюдение: локальная лемма Ловаса является частным случаем
     неравенства~\eqref{eq:lll:ind2} при $\ell = n$ и $m = 0$.
+\end{proof}
+
+\begin{exercise}
+    В каждой клетке конечной ленты мы хотим написать число от $1$ до $N$. При этом
+    для каждой границы между клетками некоторые пары числе $(l,r)$ запрещены,
+    т.е. нельзя, чтобы слева от границы стояло $l$, а справа $r$. Докажите,
+    что если для каждой границы доля запрещённых пар среди всех пар не больше 
+    $4/27$, то заполнение возможно.
+\end{exercise}
+\begin{exercise}
+    Докажите аналогичный результат конструктивно и без использования локальной леммы Ловаса,
+    если множество плохих пар имеет меру меньше $1/4$. (Это показывает, что в данной
+    задаче локальная лемма Ловаса не даёт оптимального ответа.)
+\end{exercise}
+
+\begin{theorem}
+    Пусть $\alpha < 1$~--- некоторое положительное вещественное число.
+    Пусть для каждого $n$ некоторые двоичные слова, общим числом не более $2^{\alpha n}$,
+    объявлены запрещёнными. Тогда существует число $N$ и бесконечно большая последовательность
+    нулей и единиц, не содержащая запрещённых подслов длиннее $N$.
+\end{theorem}
+\begin{proof}
+    По соображениям компактности достаточно доказать существование сколь угодно длинных
+    конечных последовательностей без запрещённых подслов.
+
+    Будем считать, что биты последовательности равновероятны и независимы. Появление
+    запрещённой последовательности длинны $n$ в данной позиции (на данном интервале $I$)
+    имеет вероятность $2^{(\alpha - 1)n}$, где $n$~--- длина интервала. В качестве оценки
+    в лемме Ловаса выберем для этого события возмём $2^{(\beta - 1)n}$ для некоторого
+    $\beta\in(0,\alpha)$. Нужно подобрать $\beta$ так, чтобы выполнялось условие леммы Ловаса.
+
+    Соседями события на интервале $I$ являются события на интервалах $J$, которые перекрываются
+    с $I$. Поскольку вероятности событий зависят от длины, при подсчётах удобно группировать
+    интервалы по длинам. Имеется $n+k-1$ интервал длины $k$, перекрывающихся с данным интервалом $I$
+    длины $n$. Для каждого из них в правой части оценки леммы Ловаса появляется сомножитель 
+    $(1-2^{(\beta - 1)k})$, и всего получается
+    \[
+    \bigl(1-2^{(\beta - 1)k}\bigr)^{n+k-1}.
+    \]
+    Теперь перемножим это по всем $k$ начиная с некоторого $N$. Таким образом,
+    для применения леммы Ловаса нам необходимо, чтобы
+    \[
+    2^{(\alpha - 1)n} \le 2^{(\beta - 1)n} \cdot \prod_{k\ge N}  
+    \bigl(1-2^{(\beta - 1)k}\bigr)^{n+k-1}.
+    \]
+    (В данной формуле справа учитывается и сам интервал $I$ при $n=k$, 
+    но это только уменьшает правую часть.) Покажем, что выполняется более сильное
+    неравенство: грубо оценим $n+k - 1\le nk$ (т.е. мы уменьшим числа в произведении), 
+    извлечём корень степени $n$ и перенесёт $2^{\beta - 1}$ влево.
+    \[
+    2^{(\alpha - \beta)} 
+    \le \prod_{k\ge N} \bigl(1-2^{(\beta - 1)k}\bigr)^k.
+    \]           
+    Применим к правой части неравенство Бернулли ($(1 - x)^k \ge 1 - kt$)~---
+    это ещё усилит неравенство. Получаем
+    \[
+    2^{(\alpha - \beta)} \le 1 - \sum_{k\ge N} k2^{(\beta - 1)k}.
+    \]
+    Ряд в правой части сходится при $\beta < 1$, левая часть меньше $1$
+    при $\alpha < \beta$. Таким образом по $\alpha$ можно выбрать $\beta<\alpha$ 
+    и достаточно большое $N$, для которого это неравенство выполняется, а значит
+    выполняется и более слабое исходное неравенство. И раз так, то можно применить 
+    локальную лемму Ловаса для слов длины не меньше $N$. 
     
+    Для получения бесконечного хорошего слова будем строить его итеративно.
+    Начнём с некоторого хорошего слова длины $1$, у которого есть бесконечное количество 
+    хороших продолжений (легко видеть, что такое есть). И будем постепенно добавлять к нему 
+    по одному символу так, чтобы и у полученного слова так же было бесконечное количество 
+    хороших продолжений (легко видеть, что на каждом шаге хотя бы один из символов нам 
+    подойдёт).
+\end{proof}
+\begin{corollary}[Лемма Левина]
+    Пусть $\alpha < 1$~--- некоторое положительное вещественное число.
+    Тогда существует бесконечная последовательность нулей и единиц,
+    в которой все подслова достаточно большой длины $n$ имеют сложность
+    не менее $\alpha n$.
+\end{corollary}
+\begin{exercise}\label{ex:lll:rects}
+    Докажите двумерный аналог предыдущей теоремы: можно заполнить бесконечную
+    клеточную бумагу нулями и единицами так, чтобы любой прямоугольник
+    достаточно большой площади не был запрещённым, если для каждого
+    прямоугольника площади $k$ выбрано не более $2^{\alpha k}$ запрещённых,
+    где $\alpha < 1$.
+\end{exercise}
+
+Пусть $w=w_0w_1w_2\dotso$~--- бесконечная последовательностью. Для любого конечного
+множества $F\subset\mathbb{N}$ индексов через $w(F)$ обозначим слово, составленное
+из символов $w$ с номерами из $F$ (в порядке возрастания номеров). Рассмотрим пару $(F, X)$,
+где $F$~--- конечное множество индексов, а $X$~--- слово длины $|F|$. Будем говорить,
+что последовательность $w$ запрещается парой $(F,X)$, если $w(F) = X$. Пары такого
+вида будем называть \emph{запрещениями}, а число элементов в $F$ \emph{размером 
+запрещения}. Запрещение \emph{покрывает} индексы, входящие в $F$.
+
+\begin{theorem}\label{thm:lll:subseq}
+    Пусть задано некоторое положительное вещественное число $\alpha < 1$ и 
+    множество запрещений $\{(F,X)\}$, в котором для любого индекса $i$
+    и числа $n$ имеется не более $2^{\alpha n}$ запрещений размера $n$,
+    которые покрывают $i$. Тогда существует число $N$ и последовательность,
+    не запрещённая ни одним из запрещений размера больше $N$.
+\end{theorem}
+\begin{proof}
+    Аналогично предыдущей теореме будем доказывать это утверждение для
+    конечных последовательностей, а потом воспользуемся компактностью.
+
+    Применим лемму Ловаса к нарушениям запрещений.
+    Вероятность нарушения запрещения для запрещения размера $n$ равна $2^n$.
+    Для запрещения размера $n$ в качестве $\varepsilon_i$ возьмём $2^{-\beta n}$,
+    где $\beta$~--- некоторая константа больше $\alpha$.
+
+    Соседями запрещениями будут запрещения, пересекающиеся с ним (покрывающие общий индекс).
+    Для леммы Ловаса надо взять запрещение размера $n$ и проверить, что $2^{-n}$ не больше $2^{-\beta n}$,
+    умноженного на произведение множителей $(1-2^{\beta m})$ по всем запрещения, пересекающимся с данным.
+
+    Разделим произведение на части, соответствующие различным точкам пересечения. 
+    Всего таких возможных точек $n$. Кроме того, в каждой точке сгруппируем сомножители
+    по размерам. Тогда для данной точки и данного размера запрещения $m$ получим не более
+    $2^{\alpha m}$ сомножителей вида $(1-2^{\beta m})$. Таким образом, нам нужно проверить
+    неравенство
+    \[
+        2^{-n}\le 2^{-\beta n}\cdot\prod_{m\ge N} (1-2^{-\beta m})^{2^{\alpha m}n}.
+    \]
+    Возьмём корень степени $n$
+    \[
+        2^{\beta-1}\le \prod_{m\ge N} (1-2^{-\beta m})^{2^{\alpha n}}.
+    \]
+    По неравенству Бернулли это выполняется, если 
+    \[
+        2^{\beta-1}\le 1 - \sum_{m\ge N} 2^{\alpha m}\cdot 2^{-\beta m}.
+    \]
+    Так как левая часть меньше $1$, а ряд в правой части сходится, то для 
+    достаточно большого $N$ это неравенство выполняется.
+
+    Аналогично предыдущей теореме можно построить бесконечную последовательность,
+    не нарушающую запрещений большого размера (нужно сначала выбрать $\beta$, потом
+    достаточно большое $N$ и применить лемму Ловаса к последовательностям 
+    произвольной длины).
+\end{proof}
+\begin{corollary}
+    Пусть $\alpha < 1$~--- некоторое положительное вещественное число.
+    Существует последовательность $w$ и константа $N$, для которых
+    \[
+        \max_{t\in F} K(F,w(F) \mid t) \ge \alpha |F|.
+    \]
+    при всех $F\subset\Nat$, содержащих не менее $N$ элементов и среди них $t$.
+\end{corollary}
+Заметим, что отсюда в частности следует такое свойство $w$: всякое конечное множество $F$
+размера не менее $N$ имеет элемент $t$, для которого
+\[
+    K(w(F) \mid F, t) \ge \alpha |F| - 2K(F\mid t).
+\]
+Если опустить $t$ в левой части, то получаем, что для любого достаточно большое $F$
+\[
+K(w(F) \mid F) \ge \alpha |F| - 2\max_{t\in F} K(F\mid t).
+\]
+Если считать, что индексы расположены в плоскости, а в качестве $F$ брать прямоугольники,
+то вычитаемое в правой части будет логарифмическим и его можно будет скомпенсировать за
+счёт $\alpha$. Получается утверждение упражнения~\ref{ex:lll:rects}.
+\begin{proof}
+    Применим теорему \ref{thm:lll:subseq}, где для запрещений $(F,Z)$ выполняется
+    неравенство $K(F,Z\mid t) < \alpha|F|$ для всех $t\in F$. Таким образом для
+    каждого индекса $t$ количество запрещений размера $k$, в которых содержится $t$,
+    не превосходит $2^{\alpha k}$.
+\end{proof}
+
+\subsubsection{,,Эффективное`` доказательство леммы Ловаса}
+Все предыдущие рассуждения о лемме Ловаса были неконструктивными~--- мы доказывали
+существование некоторых объектов, но не говорили как их найти. Более того,
+в наших доказательствах ,,хороший`` объект мог иметь экспоненциально маленькую
+вероятность появления, так что не было никакой надежды случайно угадать его
+за какое-то разумное (полиномиальное) число попыток.
+
+В данном разделе мы предложим очень простой вероятностный алгоритм, 
+который с хорошей вероятностью за полиномиальное время позволит найти
+,,хороший`` объект. Будем рассматривать применение алгоритма для
+конкретной задачи. Пусть нам нужно найти двоичное слово, имея
+некоторый набор запрещений, другими словами нам нужно найти
+выполняющий набор для КНФ. Выберем случайный набор. Некоторая
+доля запрещение при этом будет нарушена. Возьмём какое-нибудь
+запрещение и снова выберем биты для переменных, которые в нём участвуют.
+Скорей всего это запрещение на новых значениях переменных выполнится,
+но могут нарушиться какие-то другие. Если так, то повторим процесс
+для новых нарушенных запрещений. И так далее. Удивительным образом
+этот простой алгоритм приводит к цели.
+
+Для простоты мы будем считать, что все запрещения одинакового размера.
+Пусть КНФ содержит $n$ переменных и $N$ дизъюнктов размера $m$. Будем
+считать соседями дизъюнкты, имеющие общую переменную с данным. Пусть у
+каждого дизъюнкта не более $t$ соседей. Если $t$ невелико,
+то по лемме Ловаса эта формула выполнима.
+
+Поскольку все дизъюнкты одного размера, то разумно в лемме Ловаса для всех выбрать
+один и тот же $\varepsilon$. Тогда мы должны выполнить следующее неравенство:
+\[
+    2^{-m} \le \varepsilon(1-\varepsilon)^t.
+\]
+Правая часть максимальна при $\varepsilon = 1/(t+1),$ но для простоты возьмём $\varepsilon = 1/t$.
+Таким образом достаточно $2^{-m}\le (1-1/t)^t/t \approx 1/et$, т.е. выполнимость гарантируется при $t\le 2^m/e$.
+В конструктивном доказательстве нам потребуется более сильное условие $t\le 2^m/8$.
+
+\begin{theorem}[Moser, Tardos, 2009]
+    Существует вероятностный алгоритм, который ищет выполняющий набор любой формулы $\varphi$ в 
+    КНФ с $n$ переменными и $N$ дизъюнктами размера $m$, у каждого из которых не менее $2^m/8$
+    соседей, за полиномиальное от $n+N$ время с вероятностью не менее $1/2$.
+\end{theorem}
+\begin{proof} Будем считать, что на дизъюнктах задан порядок.
+    Алгоритм использует рекурсивную процедуру $\mathrm{Fix}(d)$:
+    \begin{quote}
+        $\phi$~--- случайный выполняющий набор\\
+        для всех дизъюнктов $d$ формулы:\\
+        \mbox{}\quad если $d$ не выполнен, то $\mathrm{Fix}(d)$.
+    \end{quote}
+    
+    \begin{quote}
+        для всех дизъюнктов $d$ формулы:\\
+        \mbox{}\quad если $d$ не выполнен, то $\mathrm{Fix}(d)$.
+    \end{quote}
 
 \end{proof}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{9}
