Эффективное доказательство ЛЛЛ

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3295,17 +3295,17 @@ K(w(F) \mid F) \ge \alpha |F| - 2\max_{t\in F} K(F\mid t).
 
 \subsubsection{,,Эффективное`` доказательство леммы Ловаса}
 Все предыдущие рассуждения о лемме Ловаса были неконструктивными~--- мы доказывали
-существование некоторых объектов, но не говорили как их найти. Более того,
+существование некоторых объектов, но не говорили, как их найти. Более того,
 в наших доказательствах ,,хороший`` объект мог иметь экспоненциально маленькую
-вероятность появления, так что не было никакой надежды случайно угадать его
-за какое-то разумное (полиномиальное) число попыток.
+вероятность, так что не было никакой надежды случайно ,,угадать`` его за 
+какое-то разумное (полиномиальное) число попыток.
 
 В данном разделе мы предложим очень простой вероятностный алгоритм, 
-который с хорошей вероятностью за полиномиальное время позволит найти
+который с константной вероятностью за полиномиальное время позволит найти
 ,,хороший`` объект. Будем рассматривать применение алгоритма для
 конкретной задачи. Пусть нам нужно найти двоичное слово, имея
 некоторый набор запрещений, другими словами нам нужно найти
-выполняющий набор для КНФ. Выберем случайный набор. Некоторая
+выполняющий набор для КНФ. Выберем случайный набор значений переменных. Некоторая
 доля запрещение при этом будет нарушена. Возьмём какое-нибудь
 запрещение и снова выберем биты для переменных, которые в нём участвуют.
 Скорей всего это запрещение на новых значениях переменных выполнится,
@@ -3319,33 +3319,81 @@ K(w(F) \mid F) \ge \alpha |F| - 2\max_{t\in F} K(F\mid t).
 каждого дизъюнкта не более $t$ соседей. Если $t$ невелико,
 то по лемме Ловаса эта формула выполнима.
 
-Поскольку все дизъюнкты одного размера, то разумно в лемме Ловаса для всех выбрать
-один и тот же $\varepsilon$. Тогда мы должны выполнить следующее неравенство:
+Поскольку все дизъюнкты одного размера, то разумно в лемме Ловаса выбрать
+один и тот же $\varepsilon$ для всех событий. Тогда мы должны выполнить следующее неравенство:
 \[
     2^{-m} \le \varepsilon(1-\varepsilon)^t.
 \]
-Правая часть максимальна при $\varepsilon = 1/(t+1),$ но для простоты возьмём $\varepsilon = 1/t$.
-Таким образом достаточно $2^{-m}\le (1-1/t)^t/t \approx 1/et$, т.е. выполнимость гарантируется при $t\le 2^m/e$.
+Правая часть максимальна при $\varepsilon = 1/(t+1),$ но для простоты положим $\varepsilon = 1/t$. 
+Тогда $2^{-m}\le (1-1/t)^t/t \approx 1/et$, т.е. выполнимость гарантируется при $t\le 2^m/e$.
 В конструктивном доказательстве нам потребуется более сильное условие $t\le 2^m/8$.
 
 \begin{theorem}[Moser, Tardos, 2009]
-    Существует вероятностный алгоритм, который ищет выполняющий набор любой формулы $\varphi$ в 
-    КНФ с $n$ переменными и $N$ дизъюнктами размера $m$, у каждого из которых не менее $2^m/8$
+    Существует вероятностный алгоритм, который ищет выполняющий набор любой формулы в 
+    КНФ с $n$ переменными и $N$ дизъюнктами размера $m$, у каждого из которых не более $2^m/8$
     соседей, за полиномиальное от $n+N$ время с вероятностью не менее $1/2$.
 \end{theorem}
 \begin{proof} Будем считать, что на дизъюнктах задан порядок.
-    Алгоритм использует рекурсивную процедуру $\mathrm{Fix}(d)$:
+    Алгоритм будет использовать рекурсивную процедуру $\mathrm{Fix}(d)$:
     \begin{quote}
-        $\phi$~--- случайный выполняющий набор\\
+        выберем случайные значения переменных $x$;\\
         для всех дизъюнктов $d$ формулы:\\
-        \mbox{}\quad если $d$ не выполнен, то $\mathrm{Fix}(d)$.
+        \mbox{}\quad если $d(x) = 0$, то $\mathrm{Fix}(d)$.
     \end{quote}
+    Для того, что бы алгоритм был корректным, процедура $\mathrm{Fix}$
+    не должна нарушать выполнимость дизъюнктов, которые мы уже просмотрели
+    (т.е. к моменту после вызова $\mathrm{Fix}(d)$ все дизъюнкты левее $d$ уже
+    выполнены и должны оставаться выполненными после вызова $\mathrm{Fix}(d)$).
     
+    Текст процедуры $\mathrm{Fix}(d)$:
     \begin{quote}
-        для всех дизъюнктов $d$ формулы:\\
-        \mbox{}\quad если $d$ не выполнен, то $\mathrm{Fix}(d)$.
+        обновляем $x$, выбирая случайные значения для всех переменных в $d$;\\
+        для всех соседей $d'$ дизъюнкта $d$:\\
+        \mbox{}\quad если $d'(x) = 0$, то $\mathrm{Fix}(d')$.
     \end{quote}
+    Будем считать, что дизъюнкт является собственным соседом, тогда нам не нужно
+    отдельно рассматривать случай, при котором новые значения переменных для $d$
+    совпали с предыдущими (т.е. дизъюнкт снова оказался не выполнен).  
+    Корректность $\mathrm{Fix}$ следует из определения~--- если уж она завершилась,
+    то она могла не могла сделать другие дизъюнкты невыполненными, т.к. изменяла
+    только те переменные, которые есть в $d$.
+    
+    Остаётся показать, что с большой вероятностью процесс завершится за полиномиальное время.
+    Заметим, что случайные биты в данном алгоритме используются только для выбора исходных 
+    значений переменных ($n$ битов) и на каждой итерации $\mathrm{Fix}$~--- для выбора новых 
+    значений переменных дизъюнкта ($m$ битов). 
+   
+    Воспользуемся следующим наблюдением: все случайные биты, использованные к данному
+    моменту работы алгоритма, можно восстановить по текущим значениям переменных и
+    по списку дизъюнктов, для которых вызывалась процедура $\mathrm{Fix}$. Действительно,
+    если в какой-то моменты времени произошёл вызов процедуры $\mathrm{Fix}(d)$,
+    то можно восстановить значения переменных входящих в $d$, т.к. дизъюнкт не выполнен
+    только при одном значении переменных. Тогда можно начать восстанавливать события
+    с конца и восстановить все биты, использованные алгоритмом.
 
+    Пусть к данному моменту произошло $k$ вызовов $\mathrm{Fix}$, т.е. алгоритм
+    использовал $n + km$ случайных битов. Для их восстановления достаточно знать:
+    \begin{enumerate}
+        \item текущие значения переменных,
+        \item номера дизъюнктов, для которых $\mathrm{Fix}$ вызывалась из основного алгоритма,
+        \item какие вызовы $\mathrm{Fix}$ были сделаны рекурсивно для каждого из дизъюнктов.
+    \end{enumerate}
+    Для первого потребуется $n$ битов, для второго не более $N$ битов (номера дизъюнктов можно 
+    задать битовой маской). Для третьего потребуется описать дерево рекурсивных вызовов. 
+    Закодируем дерево следующим способом: при рекурсивном вывозе из $d$ достаточно указывать 
+    номер соседа, для которого мы вызываемся, что требует $\log t$ битов. Кроме того
+    нам нужно как-то разделить ситуации, когда в $\mathrm{Fix}$ происходит рекурсивный вызов
+    (переход вниз по дереву вызовов), а когда выход из процедуры (переход вверх по дереву вызовов). 
+    Поэтому на каждый переход добавим один бит: $0$, если мы выходим из процедуры,
+    $1$, если мы переходим к соседу, и тогда следующие $t$ битов~--- это номер соседа.
+
+    Итого на каждую вершину дерева вызовов мы потратим $\log t + 2$ битов. В сумме получится $N + n + k\cdot(\log t + 2)$.
+    Если случайные биты имеют максимальную колмогоровскую сложность, то 
+    \[
+    n+k\cdot m - c_1 \le K(\text{случайные биты}) \le N + n + k\cdot(\log t + 2) + c_2,
+    \]
+    что даёт ограничение сверху на $k$, т.к. $\log t + 2 = \log (2^m/8) + 2 = m - 1$. 
+    Следовательно $k\le N + c$, где $c$~--- константа.
 \end{proof}
 
 
