--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3113,7 +3113,7 @@ $t\le s + 2\log n + O(1)$.
         \le \frac{\Pr [A_i\mid F]}{\Pr[N\mid F]} 
         =   \frac{\Pr [A_i]}{\Pr[N\mid F]} 
         \le \frac{\varepsilon_i \cdot \prod_{j\in N(i)} (1-\varepsilon_j)}
-                                     {\prod_{j\in N(i)} (1-\varepsilon_j)} \le \varepsilon_i.
+                                     {\prod_{j\in I \cap N(i)} (1-\varepsilon_j)} \le \varepsilon_i.
     \]
     Тут первое неравенство является применением неравенства~\eqref{eq:lll:fact}, равенство выполняется,
     т.к. $A_i$ независимо от $F$ ($A_i$ независимо от не соседей $A_i$), а второе неравенство
@@ -3200,12 +3200,12 @@ $t\le s + 2\log n + O(1)$.
     хороших продолжений (легко видеть, что на каждом шаге хотя бы один из символов нам 
     подойдёт).
 \end{proof}
-\begin{corollary}[Лемма Левина]
+\begin{exercise}[Лемма Левина]
     Пусть $\alpha < 1$~--- некоторое положительное вещественное число.
     Тогда существует бесконечная последовательность нулей и единиц,
     в которой все подслова достаточно большой длины $n$ имеют сложность
     не менее $\alpha n$.
-\end{corollary}
+\end{exercise}
 \begin{exercise}\label{ex:lll:rects}
     Докажите двумерный аналог предыдущей теоремы: можно заполнить бесконечную
     клеточную бумагу нулями и единицами так, чтобы любой прямоугольник
@@ -3252,7 +3252,7 @@ $t\le s + 2\log n + O(1)$.
     \]
     Возьмём корень степени $n$
     \[
-        2^{\beta-1}\le \prod_{m\ge N} (1-2^{-\beta m})^{2^{\alpha n}}.
+        2^{\beta-1}\le \prod_{m\ge N} (1-2^{-\beta m})^{2^{\alpha m}}.
     \]
     По неравенству Бернулли это выполняется, если 
     \[
