Симметричный случай ЛЛЛ

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3131,6 +3131,35 @@ $t\le s + 2\log n + O(1)$.
     неравенства~\eqref{eq:lll:ind2} при $\ell = n$ и $m = 0$.
 \end{proof}
 
+\begin{corollary}[Локальная лемма Ловаса для симметричного случая]
+    Пусть в условии локальной леммы Ловаса дополнительно известно, что каждое событие $A_i$
+    вероятность не более $p$ и не более $d$ соседей.
+    Тогда если \[ep(d+1) \le 1,\] то с положительной вероятностью не произойдёт ни одного 
+    события $A_i$.
+\end{corollary}
+\begin{proof}
+    По лемме Ловаса нам нужно подобрать $\varepsilon_i$ такие, что 
+    \[
+        \Pr[A_i] \le p \le \varepsilon_i\cdot\prod_{j\in N(i)}(1-\varepsilon_j). 
+    \]
+    Давайте для всех событий возьмём один и тот же $\varepsilon$. Тогда нам достаточно
+    найти $\varepsilon$, удовлетворяющий условию
+    \[
+        p \le \varepsilon\cdot(1-\varepsilon)^d. 
+    \]
+    Рассмотрим выражение $(d\varepsilon)\cdot(1-\varepsilon)^d$. Если сложить все $d+1$
+    сомножителей (скобок), то в сумме получится $d$. Таким образом нам нужно максимизировать 
+    произведение при известной сумме множителей. Максимум достигается, когда все множители равны, 
+    т.е. $d\varepsilon = 1 - \varepsilon$, а следовательно $\varepsilon = 1/(d+1)$. 
+    При этом же значении достигается максимум исходного выражения $\varepsilon\cdot(1-\varepsilon)^d$.
+    Получаем 
+    \[
+        p \le \frac{1}{d+1}\cdot\biggl(1-\frac{1}{d+1}\biggr)^d 
+    \]
+    Осталось заметить, что $(1-\frac{1}{d+1})^d > 1/e$ при $d\ge1$.
+\end{proof}
+
+
 \begin{exercise}
     В каждой клетке конечной ленты мы хотим написать число от $1$ до $N$. При этом
     для каждой границы между клетками некоторые пары числе $(l,r)$ запрещены,
