--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3156,7 +3156,7 @@ $t\le s + 2\log n + O(1)$.
     \[
         p \le \frac{1}{d+1}\cdot\biggl(1-\frac{1}{d+1}\biggr)^d 
     \]
-    Осталось заметить, что $(1-\frac{1}{d+1})^d > 1/e$ при $d\ge1$.
+    Осталось заметить, что если $(1 + \frac{1}{d})^d < e$, то $(1-\frac{1}{d+1})^d > 1/e$ при $d\ge1$.
 \end{proof}
 
 
