--- a/notes/lecture02.tex
+++ b/notes/lecture02.tex
@@ -2,7 +2,7 @@
 \documentclass[12pt]{article}
 \usepackage{infocourse}
 %opening
-\title{,,Теория информации``.\\ Лекция 1}
+\title{,,Теория информации``.\\ Лекция 2 и 3}
 \author{А.В. Смаль}
 
 \begin{document}
