Исправления от студентов

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -166,7 +166,7 @@
 т.о. \(\alpha^2 = 1 - \alpha\), \(\alpha=(\sqrt 5 - 1) / 2\). При любом ответе мы заплатим \(c = 1/(-\log \alpha)\approx 1.44\) рублей за бит, а в целом~— \(\log n / (-\log\alpha)\) рублей.
 
 \paragraph{Нижняя оценка.} Применим рассуждение про злонамеренного противника (adversary argument). Пусть противник
-выбирает ответ ДА/НЕТ в зависимости от того, какое из двух значение \(1/(\log |X| - \log|X \cap T|)\) и \((2/\log |X| -
+выбирает ответ ДА/НЕТ в зависимости от того, какое из двух значений \(1/(\log |X| - \log|X \cap T|)\) и \(2/(\log |X| -
 \log|X \cap \overline T|)\) больше. При любых \(X,\ T\) одно из этих значений не меньше \(c = 1/(-\log\alpha)\). Таким
 образом мы заставляем алгоритм платить не менее \(c\) рублей за бит, а значит любой алгоритм в худшем случае заплатит
 \(\lceil c\log n\rceil\) рублей.
@@ -282,8 +282,8 @@ $y\sim x$.
     Тогда классы эквивалентности Алисы: $\{1,4\}$, $\{2,5\}$ и $\{3\}$,
     а классы эквивалентности Боба:  $\{1,3,5\}$ и $\{2,4\}$.
     В мире 1 Алиса знает, что мир меньше 5, а Боб не знает. В мире 4 они оба это знают.
-    В мире 1 Алиса не знает, что Боря не знает, что мир меньше 5 (действительно, в мире 4,
-    который с точки зрения Алисы эквивалентен 1, Боря это знает).
+    В мире 1 Алиса не знает, что Боб не знает, что мир меньше 5 (действительно, в мире 4,
+    который с точки зрения Алисы эквивалентен 1, Боб это знает).
 \end{example}
 
 \begin{problem}
@@ -1286,7 +1286,7 @@ I(\alpha:\gamma\mid\beta).$
     \begin{cases}
         A_i \sim X_j\\
         A_i \sim Y_k
-    \end{cases} \implies A_i\sim(X_i,Y_k),
+    \end{cases} \implies A_i\sim(X_j,Y_k),
 \]
 то  \(H(a\mid x) + H(a\mid y) \le H(a)\). (Обозначение $A_i\sim X_j$ $\iff$ $\Pr[a=A_i \land x=X_j]>0$.)
 \end{statement}
@@ -1309,7 +1309,7 @@ I(\alpha:\gamma\mid\beta).$
     \]
     Таким образом
     \[
-        H(a',x',y') = H(a') + H(x'\mid a') + H(y'\mid a') + \underbrace{I(x':y'\mid a')}_{0}.
+        H(a',x',y') = H(a') + H(x'\mid a') + H(y'\mid a') - \underbrace{I(x':y'\mid a')}_{0}.
     \]
     С другой стороны
     \[
@@ -1320,7 +1320,7 @@ I(\alpha:\gamma\mid\beta).$
         H(x) + H(y) + H(a'\mid x',y') \ge H(a',x',y') = H(a) + H(x\mid a) + H(y\mid a).
     \]
     Покажем, что $H(a'\mid x', y') = 0$, т.е. $a' = f(x',y')$. Действительно: 
-    если тройка $(A_i, X_i, Y_k)$ в новом распределении встречается с положительной
+    если тройка $(A_i, X_j, Y_k)$ в новом распределении встречается с положительной
     вероятностью, то и в исходном распределении она так же встречалась с положительной
     вероятностью, следовательно $a' = f(x',y')$.
     Получаем: $H(a) + H(x\mid a) + H(y\mid a) \le H(x) + H(y)$. Прибавим $H(a)$ к обеим частям
@@ -1346,7 +1346,7 @@ I(\alpha:\gamma\mid\beta).$
     \begin{cases}
         A_i \sim X_j,\\
         A_i \sim Y_k,
-    \end{cases} \implies A_i\sim(X_i,Y_k).
+    \end{cases} \implies A_i\sim(X_j,Y_k).
 \]
 Теперь применим: $\underbrace{H(a\mid x)}_{\ge\log n} + 
                   \underbrace{H(a\mid y)}_{\ge\log m} \le H(a) \le \log (\text{\# цветов})$.
