Исправления от студентов, часть 3

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -160,8 +160,8 @@
 Разрешается задавать любые вопросы с ответами ДА/НЕТ. При ответе ДА мы
 заплатим 1 рубль, а при ответе НЕТ~— два рубля. Сколько необходимо и достаточно заплатить для отгадывания числа?
 
-\paragraph{Верхняя оценка.} Давайте задавать вопросы так, чтобы отрицательные ответы приносили в два раза больше информации, чем положительные. Тогда за каждый бит информации мы заплатим \(c\log n\) для некоторой константы \(c\). Пусть вопросы будут вида ,,\(x\in T\)?``. Тогда требуется
-\[2(\log |X| - \log|X \cap T|) = \log |X| - \log|X\cap\overline T|.\]
+\paragraph{Верхняя оценка.} Давайте задавать вопросы так, чтобы отрицательные ответы приносили в два раза больше информации, чем положительные. Тогда за каждый бит информации мы заплатим некоторое константное количество рублей \(c\). Пусть все вопросы будут вида ,,\(x\in T\)?``. Потребуем, чтобы
+\[2\cdot(\log |X| - \log|X \cap T|) = \log |X| - \log|X\cap\overline T|.\]
 Пусть \(|X \cap T| = \alpha|X|\), тогда \(|X\cap\overline T| = (1 - \alpha)|X|\),
 т.о. \(\alpha^2 = 1 - \alpha\), \(\alpha=(\sqrt 5 - 1) / 2\). При любом ответе мы заплатим \(c = 1/(-\log \alpha)\approx 1.44\) рублей за бит, а в целом~— \(\log n / (-\log\alpha)\) рублей.
 
@@ -3102,10 +3102,10 @@ $t\le s + 2\log n + O(1)$.
     то неравенство~\eqref{eq:lll:ind1} верно для $k = t$.
     \end{lemma}
     \begin{proof}
-    Если $I\cap N(i) = \emptyset$, то неравенство~\eqref{eq:lll:ind1} выполняется, т.к. 
+    Если $J\cap N(i) = \emptyset$, то неравенство~\eqref{eq:lll:ind1} выполняется, т.к. 
     $A_i$ независимо в совокупности с $\seqin{A}{i}{k}$. Иначе введём следующие обозначения:
-    \[N = \bigwedge_{j\in I\cap N(i)} \overline A_j,\quad
-      F = \bigwedge_{j\in I\setminus N(i)} \overline A_j.
+    \[N = \bigwedge_{j\in J\cap N(i)} \overline A_j,\quad
+      F = \bigwedge_{j\in J\setminus N(i)} \overline A_j.
     \]
     В этих обозначениях левая часть неравенства~\eqref{eq:lll:ind1} переписывается следующим образом:
     \[
@@ -3113,7 +3113,7 @@ $t\le s + 2\log n + O(1)$.
         \le \frac{\Pr [A_i\mid F]}{\Pr[N\mid F]} 
         =   \frac{\Pr [A_i]}{\Pr[N\mid F]} 
         \le \frac{\varepsilon_i \cdot \prod_{j\in N(i)} (1-\varepsilon_j)}
-                                     {\prod_{j\in I \cap N(i)} (1-\varepsilon_j)} \le \varepsilon_i.
+                                     {\prod_{j\in J \cap N(i)} (1-\varepsilon_j)} \le \varepsilon_i.
     \]
     Тут первое неравенство является применением неравенства~\eqref{eq:lll:fact}, равенство выполняется,
     т.к. $A_i$ независимо от $F$ ($A_i$ независимо от не соседей $A_i$), а второе неравенство
@@ -3133,8 +3133,8 @@ $t\le s + 2\log n + O(1)$.
 
 \begin{corollary}[Локальная лемма Ловаса для симметричного случая]
     Пусть в условии локальной леммы Ловаса дополнительно известно, что каждое событие $A_i$
-    вероятность не более $p$ и не более $d$ соседей.
-    Тогда если \[ep(d+1) \le 1,\] то с положительной вероятностью не произойдёт ни одного 
+    имеет вероятность не более $p$ и число соседей не более $d$.
+    Тогда, если \[ep(d+1) \le 1,\] то с положительной вероятностью не произойдёт ни одного 
     события $A_i$.
 \end{corollary}
 \begin{proof}
@@ -3263,18 +3263,18 @@ $t\le s + 2\log n + O(1)$.
     конечных последовательностей, а потом воспользуемся компактностью.
 
     Применим лемму Ловаса к нарушениям запрещений.
-    Вероятность нарушения запрещения для запрещения размера $n$ равна $2^n$.
+    Вероятность нарушения запрещения для запрещения размера $n$ равна $2^{-n}$.
     Для запрещения размера $n$ в качестве $\varepsilon_i$ возьмём $2^{-\beta n}$,
     где $\beta$~--- некоторая константа больше $\alpha$.
 
     Соседями запрещениями будут запрещения, пересекающиеся с ним (покрывающие общий индекс).
     Для леммы Ловаса надо взять запрещение размера $n$ и проверить, что $2^{-n}$ не больше $2^{-\beta n}$,
-    умноженного на произведение множителей $(1-2^{\beta m})$ по всем запрещения, пересекающимся с данным.
+    умноженного на произведение множителей $(1-2^{-\beta m})$ по всем запрещениям, пересекающимся с данным.
 
     Разделим произведение на части, соответствующие различным точкам пересечения. 
     Всего таких возможных точек $n$. Кроме того, в каждой точке сгруппируем сомножители
     по размерам. Тогда для данной точки и данного размера запрещения $m$ получим не более
-    $2^{\alpha m}$ сомножителей вида $(1-2^{\beta m})$. Таким образом, нам нужно проверить
+    $2^{\alpha m}$ сомножителей вида $(1-2^{-\beta m})$. Таким образом, нам нужно проверить
     неравенство
     \[
         2^{-n}\le 2^{-\beta n}\cdot\prod_{m\ge N} (1-2^{-\beta m})^{2^{\alpha m}n}.
@@ -3299,16 +3299,27 @@ $t\le s + 2\log n + O(1)$.
     Пусть $\alpha < 1$~--- некоторое положительное вещественное число.
     Существует последовательность $w$ и константа $N$, для которых
     \[
-        \max_{t\in F} K(F,w(F) \mid t) \ge \alpha |F|.
+        \max_{t\in F} K(F,w(F) \mid t) \ge \alpha |F|
     \]
-    при всех $F\subset\Nat$, содержащих не менее $N$ элементов и среди них $t$.
+    при всех $F\subset\Nat$, содержащих не менее $N$ элементов.
 \end{corollary}
+\begin{remark}
+В этом следствии в левой части неравенства в колмогоровской сложности к $w(F)$ 
+почему-то добавилось $F$. Дело в том, что сложность подпоследовательности 
+можно ,,закодировать`` в множестве индексов: например, в $F$ можно записать 
+индексы нулей внутри $w$ и тогда $K(w(F)) = O(1)$. Максимум условной сложности 
+в левой части возникает, т.к. мы хотели бы уметь ,,сдвигать`` множество индексов $F$
+вдоль последовательности, т.е. $t$ в данном случае является чем-то вроде ,,точки привязки``.
+В такой формулировке, например, множество индексов $\{2,4,6\}$ будет 
+иметь такую же сложность как $\{i, i+2, i+4\}$ для любых $i$, даже если сложность $i$ большая.
+\end{remark}
+
 Заметим, что отсюда в частности следует такое свойство $w$: всякое конечное множество $F$
 размера не менее $N$ имеет элемент $t$, для которого
 \[
     K(w(F) \mid F, t) \ge \alpha |F| - 2K(F\mid t).
 \]
-Если опустить $t$ в левой части, то получаем, что для любого достаточно большое $F$
+Если опустить $t$ в левой части, то получаем, что для любого достаточно большого $F$
 \[
 K(w(F) \mid F) \ge \alpha |F| - 2\max_{t\in F} K(F\mid t).
 \]
