Исправления студентов, часть 4

--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3430,10 +3430,10 @@ K(w(F) \mid F) \ge \alpha |F| - 2\max_{t\in F} K(F\mid t).
     Итого на каждую вершину дерева вызовов мы потратим $\log t + 2$ битов. В сумме получится $N + n + k\cdot(\log t + 2)$.
     С вероятность $1/2$ случайные биты имеют максимальную колмогоровскую сложность, т.е.
     \[
-    n+k\cdot m \le K(\text{случайные биты}) \le N + n + k\cdot(\log t + 2) + c,
+    n+k\cdot m - 1 \le K(\text{случайные биты}) \le N + n + k\cdot(\log t + 2) + c,
     \]
     что даёт ограничение сверху на $k$, т.к. $\log t + 2 = \log (2^m/8) + 2 = m - 1$. 
-    Следовательно $k\le N + c$, где $c$~--- константа.
+    Следовательно $k\le N + c + 1$, где $c$~--- константа.
 \end{proof}
 
 
