--- a/notes/questions.tex
+++ b/notes/questions.tex
@@ -72,7 +72,7 @@
 \newenvironment{tasks}{\paragraph{Задачи.}\begin{enumerate}}{\end{enumerate}}
 
 %opening
-\title{Вопросы к экзамену по ,,теорит информации``}
+\title{Вопросы к экзамену по ,,теории информации``}
 
 \begin{document}
 
@@ -117,7 +117,7 @@
 	\item \textbf{Колмогоровская сложность.} Теорема о существовании
 	оптимального способа описания. Определение колмогоровской сложности.
 	Свойства колмогоровской сложности.
-	Слов большой сложности. Невычислимость колмогоровской сложности.
+	Слова большой сложности. Невычислимость колмогоровской сложности.
 	Связь колмогоровской сложности и энтропии. 
 	
 	\item \textbf{Условная колмогоровская сложность и сложность пары.} 
