--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -3033,7 +3033,7 @@ $t\le s + 2\log n + O(1)$.
 количеством \emph{соседей}. Будем обозначать $N(i)$~--- множество соседей события $i$.
 
 \begin{theorem}[Локальная лемма Ловаса] Пусть задано множество из $n$ событий $\{\seqn{A}{n}\}$,
-    в котором каждое событие $A_i$ независимо в совокупности со всеми событиями $A_j$, $j\not\in N(i)$.
+    в котором каждое событие $A_i$ независимо со всеми событиями $A_j$, $j\not\in N(i)$.
     Если для каждого $i$ выбрано $\varepsilon_i < 1$ так, что
     \[
     \Pr[A_i]\le \varepsilon_i\cdot\prod_{j\in N(i)} (1 - \varepsilon_j),
