--- a/notes/2017-information-theory.tex
+++ b/notes/2017-information-theory.tex
@@ -1948,7 +1948,7 @@ Y)\times Z$}~--- нужно только дополнительно потреб
 \begin{definition}  
     \emph{Игра Карчмера-Вигдерсона для функции $f : \{0,1\}^n \to \{0,1\}$}~--- это 
     следующая коммуникационная игра: Алиса получает $x\in f^{-1}(0)$, Боб получает 
-    $y\in f^{-1}(1)$, и они вместе пытаются найте такое $i\in [n]$, что $x_i \neq y_i$. 
+    $y\in f^{-1}(1)$, и они вместе пытаются найти такое $i\in [n]$, что $x_i \neq y_i$. 
     Другими словами, игра Карчмера-Вигдерсона~--- это коммуникационная задача для 
     \emph{отношения} $$R_f = \{((x,y),i)\mid x\in f^{-1}(0), y\in f^{-1}(1), x_i\neq y_i\}.$$
     Отношение $R_f$ будем называть \emph{отношением Карчмера-Вигдерсона} для функции $f$.
@@ -1997,7 +1997,7 @@ Y)\times Z$}~--- нужно только дополнительно потреб
 \begin{theorem}[Карчмер-Вигдерсон]
     Для каждой формулы $\phi$ вычисляющей $f$, существует такой
     протокол $\Pi_\phi$ для отношения Карчмера-Вигдерсона $R_f$, что его дерево
-    совпадает с деревом, описывающим структуру формулу $\phi$. 
+    совпадает с деревом, описывающим структуру формулы $\phi$. 
     Верно и обратное утверждение: если есть протокол для $R_f$, 
     то есть и формула с такой же структурой.
 \end{theorem}
@@ -3186,7 +3186,7 @@ $t\le s + 2\log n + O(1)$.
     Будем считать, что биты последовательности равновероятны и независимы. Появление
     запрещённой последовательности длинны $n$ в данной позиции (на данном интервале $I$)
     имеет вероятность $2^{(\alpha - 1)n}$, где $n$~--- длина интервала. В качестве оценки
-    в лемме Ловаса выберем для этого события возмём $2^{(\beta - 1)n}$ для некоторого
+    в лемме Ловаса для этого события возмём $2^{(\beta - 1)n}$ для некоторого
     $\beta\in(0,\alpha)$. Нужно подобрать $\beta$ так, чтобы выполнялось условие леммы Ловаса.
 
     Соседями события на интервале $I$ являются события на интервалах $J$, которые перекрываются
@@ -3206,7 +3206,7 @@ $t\le s + 2\log n + O(1)$.
     (В данной формуле справа учитывается и сам интервал $I$ при $n=k$, 
     но это только уменьшает правую часть.) Покажем, что выполняется более сильное
     неравенство: грубо оценим $n+k - 1\le nk$ (т.е. мы уменьшим числа в произведении), 
-    извлечём корень степени $n$ и перенесёт $2^{\beta - 1}$ влево.
+    извлечём корень степени $n$ и перенесём $2^{\beta - 1}$ влево.
     \[
     2^{(\alpha - \beta)} 
     \le \prod_{k\ge N} \bigl(1-2^{(\beta - 1)k}\bigr)^k.
